Se creó con Colab

--- a/AluraStoreLatam.ipynb
+++ b/AluraStoreLatam.ipynb
@@ -37,14 +37,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 21,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 400
         },
         "id": "T3EvaeQ_INIL",
-        "outputId": "f4fef652-cd73-4a90-ab4a-874ab3d594a8"
+        "outputId": "074355b8-30d0-4c26-ec1f-d824245bebda"
       },
       "outputs": [
         {
@@ -74,7 +74,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-a4f9b2cf-866a-4b34-b8b3-b1ba102632d7\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-fdc13d39-4d21-41be-bf69-5d8a91001470\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -189,7 +189,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a4f9b2cf-866a-4b34-b8b3-b1ba102632d7')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-fdc13d39-4d21-41be-bf69-5d8a91001470')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -241,12 +241,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-a4f9b2cf-866a-4b34-b8b3-b1ba102632d7 button.colab-df-convert');\n",
+              "        document.querySelector('#df-fdc13d39-4d21-41be-bf69-5d8a91001470 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-a4f9b2cf-866a-4b34-b8b3-b1ba102632d7');\n",
+              "        const element = document.querySelector('#df-fdc13d39-4d21-41be-bf69-5d8a91001470');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -266,8 +266,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-3e4bf314-37f7-4be2-a19c-068300f99452\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-3e4bf314-37f7-4be2-a19c-068300f99452')\"\n",
+              "    <div id=\"df-cc7a1a2d-654d-44af-9b78-0fc372d95a99\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-cc7a1a2d-654d-44af-9b78-0fc372d95a99')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -386,7 +386,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-3e4bf314-37f7-4be2-a19c-068300f99452 button');\n",
+              "            document.querySelector('#df-cc7a1a2d-654d-44af-9b78-0fc372d95a99 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -403,7 +403,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 21
         }
       ],
       "source": [
@@ -484,13 +484,13 @@
       ],
       "metadata": {
         "id": "nKprHDZiDIz7",
-        "outputId": "03709e1b-5759-4530-a120-c3d390ef6e77",
+        "outputId": "7f8bc430-8f9c-40c9-e3f1-5a7e0bcc1f88",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 752
         }
       },
-      "execution_count": 4,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -587,7 +587,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 22
         },
         {
           "output_type": "display_data",
@@ -679,12 +679,12 @@
       ],
       "metadata": {
         "id": "A34YupIuYhfF",
-        "outputId": "5567647c-ccb8-4c0f-854d-57e163448be8",
+        "outputId": "8799ef6f-7a56-4f1c-bac3-ba0755457498",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -762,12 +762,12 @@
       ],
       "metadata": {
         "id": "yZR6cOjXYSk1",
-        "outputId": "26daaa75-5deb-4ac0-a952-0d61bb04ff75",
+        "outputId": "b348334e-a43c-416c-c4f0-31ec99fb35a9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -897,12 +897,12 @@
       ],
       "metadata": {
         "id": "bh3jjjJwY5MU",
-        "outputId": "cb3f3b19-b53d-43bf-d8c7-ddddddd3deba",
+        "outputId": "b22d539b-47cc-443b-e12b-e594a5467b15",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -918,37 +918,12 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "def clasificacion_promedio(tienda, numero):\n",
-        "    promedio = tienda['Calificación'].mean()\n",
-        "    print(f\"Clasificación promedio en Tienda {numero}: {promedio:.2f}\")\n",
-        "\n",
-        "# Mostrar resultados para cada tienda\n",
-        "clasificacion_promedio(tienda, 1)\n",
-        "clasificacion_promedio(tienda2, 2)\n",
-        "clasificacion_promedio(tienda3, 3)\n",
-        "clasificacion_promedio(tienda4, 4)"
-      ],
+      "source": [],
       "metadata": {
-        "id": "I0KkjPoTY88F",
-        "outputId": "18bda8ec-90b3-4094-f9fc-15ac27c6ba80",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "I0KkjPoTY88F"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Clasificación promedio en Tienda 1: 3.98\n",
-            "Clasificación promedio en Tienda 2: 4.04\n",
-            "Clasificación promedio en Tienda 3: 4.05\n",
-            "Clasificación promedio en Tienda 4: 4.00\n"
-          ]
-        }
-      ]
+      "execution_count": 1,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -961,12 +936,119 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "\n",
+        "# 4. Productos más y menos vendidos\n",
+        "\n",
+        "def productos_vendidos(df, numero_tienda):\n",
+        "    \"\"\"\n",
+        "    Clasifica y muestra los productos más y menos vendidos de una tienda.\n",
+        "\n",
+        "    Args:\n",
+        "        df (pd.DataFrame): DataFrame con los datos de la tienda.\n",
+        "        numero_tienda (int): Número de la tienda.\n",
+        "    \"\"\"\n",
+        "    # Agrupar por producto y sumar la cantidad vendida\n",
+        "    ventas_por_producto = df.groupby('Producto')['Precio'].sum()\n",
+        "\n",
+        "    print(f\"\\n--- Productos más y menos vendidos en Tienda {numero_tienda} ---\")\n",
+        "\n",
+        "    # Productos más vendidos (orden descendente)\n",
+        "    productos_mas_vendidos = ventas_por_producto.sort_values(ascending=False)\n",
+        "    print(\"\\nProductos más vendidos:\")\n",
+        "    print(productos_mas_vendidos.head(3)) # Mostrar los 10 productos más vendidos\n",
+        "\n",
+        "    # Productos menos vendidos (orden ascendente)\n",
+        "    productos_menos_vendidos = ventas_por_producto.sort_values(ascending=True)\n",
+        "    print(\"\\nProductos menos vendidos:\")\n",
+        "    print(productos_menos_vendidos.head(3)) # Mostrar los 10 productos menos vendidos\n",
+        "\n",
+        "# Aplicar la función a cada tienda\n",
+        "productos_vendidos(tienda, 1)\n",
+        "productos_vendidos(tienda2, 2)\n",
+        "productos_vendidos(tienda3, 3)\n",
+        "productos_vendidos(tienda4, 4)"
+      ],
       "metadata": {
-        "id": "qoyjqijQZHfF"
+        "id": "qoyjqijQZHfF",
+        "outputId": "de66718d-43d7-430e-ce4a-19840b4923c6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "--- Productos más y menos vendidos en Tienda 1 ---\n",
+            "\n",
+            "Productos más vendidos:\n",
+            "Producto\n",
+            "TV LED UHD 4K    142150200.0\n",
+            "Refrigerador     112143300.0\n",
+            "Iphone 15         97902200.0\n",
+            "Name: Precio, dtype: float64\n",
+            "\n",
+            "Productos menos vendidos:\n",
+            "Producto\n",
+            "Cuerda para saltar    652800.0\n",
+            "Dinosaurio Rex        688900.0\n",
+            "Cubo mágico 8x8       696900.0\n",
+            "Name: Precio, dtype: float64\n",
+            "\n",
+            "--- Productos más y menos vendidos en Tienda 2 ---\n",
+            "\n",
+            "Productos más vendidos:\n",
+            "Producto\n",
+            "Iphone 15        113225800.0\n",
+            "TV LED UHD 4K    103375000.0\n",
+            "Refrigerador      97632500.0\n",
+            "Name: Precio, dtype: float64\n",
+            "\n",
+            "Productos menos vendidos:\n",
+            "Producto\n",
+            "Cubo mágico 8x8       643600.0\n",
+            "Dinosaurio Rex        770300.0\n",
+            "Cuerda para saltar    856900.0\n",
+            "Name: Precio, dtype: float64\n",
+            "\n",
+            "--- Productos más y menos vendidos en Tienda 3 ---\n",
+            "\n",
+            "Productos más vendidos:\n",
+            "Producto\n",
+            "Refrigerador     99889700.0\n",
+            "TV LED UHD 4K    96669100.0\n",
+            "Iphone 15        93225700.0\n",
+            "Name: Precio, dtype: float64\n",
+            "\n",
+            "Productos menos vendidos:\n",
+            "Producto\n",
+            "Cubo mágico 8x8       640400.0\n",
+            "Dinosaurio Rex        795600.0\n",
+            "Cuerda para saltar    853800.0\n",
+            "Name: Precio, dtype: float64\n",
+            "\n",
+            "--- Productos más y menos vendidos en Tienda 4 ---\n",
+            "\n",
+            "Productos más vendidos:\n",
+            "Producto\n",
+            "Iphone 15        96697500.0\n",
+            "TV LED UHD 4K    90295300.0\n",
+            "Smart TV         82790400.0\n",
+            "Name: Precio, dtype: float64\n",
+            "\n",
+            "Productos menos vendidos:\n",
+            "Producto\n",
+            "Cuerda para saltar    704800.0\n",
+            "Cubo mágico 8x8       748400.0\n",
+            "Dinosaurio Rex        858100.0\n",
+            "Name: Precio, dtype: float64\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -988,18 +1070,80 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "\n",
+        "\n",
+        "def envio_promedio(df, numero_tienda):\n",
+        "    \"\"\"\n",
+        "    Calcula y muestra el costo de envío promedio de una tienda.\n",
+        "\n",
+        "    Args:\n",
+        "        df (pd.DataFrame): DataFrame con los datos de la tienda.\n",
+        "        numero_tienda (int): Número de la tienda.\n",
+        "    \"\"\"\n",
+        "    # Verificar si la columna 'Costo de envío' existe\n",
+        "    if 'Costo de envío' in df.columns:\n",
+        "        # Calcular el promedio de la columna 'Costo de envío'\n",
+        "        promedio_envio = df['Costo de envío'].mean()\n",
+        "        print(f\"Costo de envío promedio en Tienda {numero_tienda}: ${promedio_envio:.2f}\")\n",
+        "    else:\n",
+        "        print(f\"La columna 'Costo de Envío' no se encontró en el DataFrame de la Tienda {numero_tienda}.\")\n",
+        "\n",
+        "# Aplicar la función a cada tienda\n",
+        "envio_promedio(tienda, 1)\n",
+        "envio_promedio(tienda2, 2)\n",
+        "envio_promedio(tienda3, 3)\n",
+        "envio_promedio(tienda4, 4)\n"
+      ],
       "metadata": {
-        "id": "S2JeaCykZNy9"
+        "id": "S2JeaCykZNy9",
+        "outputId": "cd574c0b-cecb-4081-9c3b-ed13b50b576a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Costo de envío promedio en Tienda 1: $26018.61\n",
+            "Costo de envío promedio en Tienda 2: $25216.24\n",
+            "Costo de envío promedio en Tienda 3: $24805.68\n",
+            "Costo de envío promedio en Tienda 4: $23459.46\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(tienda['Costo de envío'].dtype)"
+      ],
+      "metadata": {
+        "id": "0tSdCie9ZQlt",
+        "outputId": "6346ce78-b53a-4005-e28f-74a37c1ba3a7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "float64\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "0tSdCie9ZQlt"
+        "id": "-RsnPVssOjb_"
       },
       "execution_count": null,
       "outputs": []
