Se creó con Colab

--- a/AluraStoreLatam.ipynb
+++ b/AluraStoreLatam.ipynb
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -490,7 +490,7 @@
           "height": 752
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -684,7 +684,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -767,7 +767,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -902,7 +902,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -922,7 +922,7 @@
       "metadata": {
         "id": "I0KkjPoTY88F"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -976,7 +976,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1102,7 +1102,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1128,7 +1128,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1144,6 +1144,74 @@
       "source": [],
       "metadata": {
         "id": "-RsnPVssOjb_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Informe Final: Identificación de la Tienda Menos Eficiente\n",
+        "\n",
+        "## Introducción\n",
+        "El presente análisis tiene como objetivo evaluar el rendimiento de cuatro tiendas (Tienda 1, Tienda 2, Tienda 3 y Tienda 4) con el fin de identificar **cuál de ellas presenta menor eficiencia y debería ser vendida** por el Sr. Juan.  \n",
+        "La evaluación se ha realizado considerando los siguientes factores:\n",
+        "- Ingresos totales por tienda.\n",
+        "- Categorías de productos más y menos vendidas (por ingresos).\n",
+        "- Calificación promedio otorgada por los clientes.\n",
+        "- Productos más y menos vendidos (por cantidad de ventas e ingresos).\n",
+        "- Costo de envío promedio.\n",
+        "\n",
+        "A partir de estos indicadores y mediante el uso de visualizaciones, se busca comprender de forma integral el desempeño de cada tienda.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## Desarrollo del Análisis\n",
+        "\n",
+        "### 1. Ingresos Totales\n",
+        "El gráfico de barras de ingresos totales evidenció que algunas tiendas presentan ventas significativamente mayores que otras.  \n",
+        "- **Tienda con mayores ingresos**: Tienda X (mencionar monto).  \n",
+        "- **Tienda con menores ingresos**: Tienda Y (mencionar monto).\n",
+        "\n",
+        "### 2. Categorías de Productos\n",
+        "Se analizaron las ventas por categoría (en valor monetario).  \n",
+        "- La categoría más rentable de la mejor tienda fue **Categoría A**, mientras que en la menos rentable apenas se destacaron **Categoría B** y otras de bajo ticket promedio.  \n",
+        "- En la tienda con peor rendimiento, las categorías más vendidas no generan altos ingresos en comparación con las demás.\n",
+        "\n",
+        "### 3. Calificación Promedio\n",
+        "Las calificaciones promedio mostraron diferencias en la satisfacción de los clientes.  \n",
+        "- **Mayor calificación**: Tienda X (mencionar valor).  \n",
+        "- **Menor calificación**: Tienda Y (mencionar valor), evidenciando posibles problemas de calidad o servicio.\n",
+        "\n",
+        "### 4. Productos Más y Menos Vendidos\n",
+        "En la tienda con mejor rendimiento, los productos más vendidos coinciden con los que generan más ingresos.  \n",
+        "En la tienda menos eficiente, los productos más vendidos no son necesariamente los más rentables, lo que sugiere una mala gestión del portafolio.\n",
+        "\n",
+        "### 5. Costo de Envío Promedio\n",
+        "Un costo de envío elevado puede reducir la competitividad.  \n",
+        "- La tienda menos eficiente presenta un costo de envío promedio superior al de la competencia, afectando la satisfacción del cliente y la conversión de ventas.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## Conclusión y Recomendación\n",
+        "Con base en los indicadores analizados y las visualizaciones generadas, se concluye que **la Tienda Y** es la menos eficiente, ya que:\n",
+        "- Presenta **los ingresos más bajos**.\n",
+        "- Sus **categorías líderes no aportan ingresos significativos**.\n",
+        "- Tiene una **calificación promedio inferior** a la de las demás tiendas.\n",
+        "- El **costo de envío promedio es más alto**, lo que reduce su competitividad.\n",
+        "- Existe **desalineación entre los productos más vendidos y los más rentables**.\n",
+        "\n",
+        "Por lo anterior, se recomienda que el Sr. Juan considere **vender la Tienda Y**, ya que su bajo rendimiento general y falta de ventajas competitivas dificultan su recuperación frente a las demás tiendas evaluadas.\n"
+      ],
+      "metadata": {
+        "id": "l7pt47JoHdj-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "40M1D488Helh"
       },
       "execution_count": null,
       "outputs": []
