--- a/AluraStoreLatam.ipynb
+++ b/AluraStoreLatam.ipynb
@@ -1216,12 +1216,12 @@
         "plt.show()\n"
       ],
       "metadata": {
-        "id": "fyPfr2lqI_Pq",
-        "outputId": "30dd463c-cd9d-499c-c6db-b85f3696ff3d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 716
-        }
+        },
+        "id": "fyPfr2lqI_Pq",
+        "outputId": "30dd463c-cd9d-499c-c6db-b85f3696ff3d"
       },
       "execution_count": 13,
       "outputs": [
@@ -1254,12 +1254,12 @@
         "plt.show()\n"
       ],
       "metadata": {
-        "id": "fB6HvtuuJGTw",
-        "outputId": "6397b935-2855-44c9-9b68-3ad4311b9043",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 565
-        }
+        },
+        "id": "fB6HvtuuJGTw",
+        "outputId": "6397b935-2855-44c9-9b68-3ad4311b9043"
       },
       "execution_count": 14,
       "outputs": [
@@ -1297,18 +1297,18 @@
         "\n",
         "### 1. Ingresos Totales\n",
         "El gráfico de barras de ingresos totales evidenció que algunas tiendas presentan ventas significativamente mayores que otras.  \n",
-        "- **Tienda con mayores ingresos**: Tienda X .  \n",
-        "- **Tienda con menores ingresos**: Tienda Y .\n",
+        "- **Tienda con mayores ingresos**: Tienda 1 .  \n",
+        "- **Tienda con menores ingresos**: Tienda 4 .\n",
         "\n",
         "### 2. Categorías de Productos\n",
         "Se analizaron las ventas por categoría .  \n",
-        "- La categoría más rentable de la mejor tienda fue **Categoría A**, mientras que en la menos rentable apenas se destacaron **Categoría B** y otras de bajo ticket promedio.  \n",
+        "- La categoría más rentable de la mejor tienda fue **muebles de la tienda 4**, mientras que en la menos rentable apenas se destacaron **instrumentos musicales** y otras de bajo ticket promedio.  \n",
         "- En la tienda con peor rendimiento, las categorías más vendidas no generan altos ingresos en comparación con las demás.\n",
         "\n",
         "### 3. Calificación Promedio\n",
         "Las calificaciones promedio mostraron diferencias en la satisfacción de los clientes.  \n",
-        "- **Mayor calificación**: Tienda X .  \n",
-        "- **Menor calificación**: Tienda Y , evidenciando posibles problemas de calidad o servicio.\n",
+        "- **Mayor calificación**: Tienda 1 .  \n",
+        "- **Menor calificación**: Tienda 3 , evidenciando posibles problemas de calidad o servicio.\n",
         "\n",
         "### 4. Productos Más y Menos Vendidos\n",
         "En la tienda con mejor rendimiento, los productos más vendidos coinciden con los que generan más ingresos.  \n",
@@ -1321,7 +1321,7 @@
         "---\n",
         "\n",
         "## Conclusión y Recomendación\n",
-        "Con base en los indicadores analizados y las visualizaciones generadas, se concluye que **la Tienda Y** es la menos eficiente, ya que:\n",
+        "Con base en los indicadores analizados y las visualizaciones generadas, se concluye que **la Tienda 4** es la menos eficiente, ya que:\n",
         "- Presenta **los ingresos más bajos**.\n",
         "- Sus **categorías líderes no aportan ingresos significativos**.\n",
         "- Tiene una **calificación promedio inferior** a la de las demás tiendas.\n",
